--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,4 +1,5 @@
 <div id="ticket">
+  <span id="author">Created by <%= @ticket.user.email %></span>
   <h2><%= @ticket.title %></h2>
   <%= simple_format(@ticket.description) %>
 </div>
