--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -4,8 +4,12 @@
   <%= simple_format(@ticket.description) %>
 </div>
 
-<%= link_to "Edit Ticket", [:edit, @project, @ticket] %>
-<%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
-      data: {
-        confirm: "Are you sure you want to delete this ticket?"
-      } %>
+<%= authorized?("edit tickets", @project) do %>
+  <%= link_to "Edit Ticket", [:edit, @project, @ticket] %>
+<% end %>
+
+<% authorized?("delete tickets", @project) do %>
+  <%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
+    data: { confirm: "Are you sure you want to delete this ticket?"} %>
+<% end %>
+
