--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -2,6 +2,20 @@
   <span id="author">Created by <%= @ticket.user.email %></span>
   <h2><%= @ticket.title %></h2>
   <%= simple_format(@ticket.description) %>
+  <% if @ticket.asset.present? %>
+    <h3>Attached File</h3>
+    <div class="asset">
+      <p>
+        <%= link_to File.basename(@ticket.asset.path), @ticket.asset.url %>
+      </p>
+      <p>
+        <small>
+          <%= number_to_human_size(@ticket.asset.size) %>
+        </small>
+      </p>
+    </div>
+  <% end %>
+
 </div>
 
 <%= authorized?("edit tickets", @project) do %>
@@ -10,6 +24,6 @@
 
 <% authorized?("delete tickets", @project) do %>
   <%= link_to "Delete Ticket", [@project, @ticket], method: :delete,
-    data: { confirm: "Are you sure you want to delete this ticket?"} %>
+      data: { confirm: "Are you sure you want to delete this ticket?"} %>
 <% end %>
 
