--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -20,23 +20,15 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </p>
-<<<<<<< HEAD
 
   <% number = 0 %>
-  <%= f.fields_for :assets do |asset| %>
-    <p>
-      <%= asset.label :asset, "File ##{number += 1}" %>
+  <div id="files">
+    <%= render partial: "files/form",
+                locals: { number: number } %>
+    <%= link_to "Add another file", 'javascript:',
+      id: "add_another_file" %>
+  </div>
 
-      <%= asset.file_field :asset %>
-    </p>
-  <% end %>
-
-=======
-  <p>
-    <%= f.label :asset, "File" %><br>
-    <%= f.file_field :asset %>
-  </p>
->>>>>>> e93d9cd55d4bf5cbaff47feae4d9a01e58c7933b
   <%= f.submit %>
 
 <% end %>
